<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:andoid="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="uk.co.ifsoft.android.AppActivity"
    android:background="@color/app_bg">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lang_button_login"
        android:id="@+id/loginBtn"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/button_blue" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lang_button_signup"
        android:id="@+id/signupBtn"
        android:visibility="visible"
        android:layout_above="@+id/loginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/signup_button_text"
        android:background="@drawable/button_signup"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appLogoView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="false"
        android:src="@drawable/app_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_internet_connection"
        android:id="@+id/appTextLabel"
        android:layout_below="@+id/appLogoView"
        android:textColor="@color/white"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="16dp" />

</RelativeLayout>
