<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ua.com.qascript.android.WelcomeActivity">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/AccountStateDisabledScreen">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:id="@+id/AccountStateDisabledContent"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_disabled"
                android:id="@+id/AccountStateDisabledMsg"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/dark_blue"
                android:paddingBottom="10dp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_account_activate"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/button_blue"
                android:id="@+id/DisabledScreenActivateBtn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_or"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/dark_blue" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_logout"
                android:background="@drawable/button_gray"
                android:textColor="@color/gray_button_text_color"
                android:textStyle="bold"
                android:id="@+id/DisabledScreenLogoutBtn"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/WelcomeScreen">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/WelcomeScreenContent"
            android:padding="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Welcome!"
                android:id="@+id/WelcomeScreenMsg"
                android:gravity="center"
                android:textColor="@color/dark_blue"
                android:textSize="16dp"
                android:textStyle="bold"
                android:paddingBottom="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_start"
                android:id="@+id/WelcomeScreenBtn"
                android:background="@drawable/button_blue"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
